# hand-recognition

./: CMakeLists.txt  README.md
src/: HandRecognitionApp.cpp  HandRecognitionApp.h  main.cpp
src/gui/opencv/: Window.cpp  Window.h
src/model/: Hand.cpp  Hand.h  Point.cpp  Point.h
src/recognition/: AngularRecognition.cpp  AngularRecognition.h  HandRecognition.cpp  HandRecognition.h  Image.cpp  Image.h  RoI.cpp  RoI.h  VelocityRecognition.cpp  VelocityRecognition.h  Video.cpp  Video.h
src/socket/: Client.cpp  Client.h
